Archive2/81/78d50f68657eba/output
main.cpp: In function 'int main()':
main.cpp:27:10: error: could not convert 'c' from 'Box<Child>' to 'Box<Parent>'
     foo(c);
          ^
